# SEC-Scrapper

./: .gitignore  AGENT.md  Cargo.toml  README.md
crates/accounting_domains/: Cargo.toml
crates/accounting_domains/src/: lib.rs
crates/api_adapter_skeleton/: Cargo.toml
crates/api_adapter_skeleton/src/: lib.rs
crates/app_core/: Cargo.toml
crates/app_core/src/: config.rs  error.rs  lib.rs  telemetry.rs
crates/app_workflow/: Cargo.toml
crates/app_workflow/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/filing_discovery/: Cargo.toml
crates/filing_discovery/src/: lib.rs
crates/filing_models/: Cargo.toml
crates/filing_models/src/: lib.rs
crates/forex/: Cargo.toml
crates/forex/src/: lib.rs
crates/html_extractor/: Cargo.toml
crates/html_extractor/src/: lib.rs
crates/normalization/: Cargo.toml
crates/normalization/src/: lib.rs
crates/sec_client/: Cargo.toml
crates/sec_client/src/: lib.rs
crates/valuation/: Cargo.toml
crates/valuation/src/: lib.rs
crates/workbook_io/: Cargo.toml
crates/workbook_io/src/: lib.rs
crates/xbrl_extractor/: Cargo.toml
crates/xbrl_extractor/src/: lib.rs
docs/: architecture.md  data_structures.txt  implementation_status.md  testing.md  workbook_schema.md  workspace_overview.md
docs/superpowers/plans/: 2026-04-23-html-multi-period-extraction.md
fixtures/0000798354/: README.md  companyfacts_sample.json  filing_sample.html
