[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["Felipe Acosta"]

[workspace.dependencies]
anyhow = "1.0.100"
calamine = "0.31.0"
clap = { version = "4.5.49", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rust_xlsxwriter = "0.92.2"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
