[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
app_workflow = { path = "../app_workflow" }
clap.workspace = true
filing_models = { path = "../filing_models" }
filing_discovery = { path = "../filing_discovery" }
normalization = { path = "../normalization" }
sec_client = { path = "../sec_client" }
tokio.workspace = true
tracing.workspace = true
valuation = { path = "../valuation" }
workbook_io = { path = "../workbook_io" }
xbrl_extractor = { path = "../xbrl_extractor" }
