[package]
name = "html_extractor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
accounting_domains = { path = "../accounting_domains" }
filing_models = { path = "../filing_models" }
scraper.workspace = true
thiserror.workspace = true
time.workspace = true
