[package]
name = "sec_client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
app_core = { path = "../app_core" }
filing_models = { path = "../filing_models" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
